chore: created sparate pages for participant and management in travel plan
