# apps/server/src/main/java/com/aayush/lad/hrms/modules/travel/dtos/travel_plan/write/RemoveParticipantsRequest.java
@@ -1,0 +1,17 @@
+package com.aayush.lad.hrms.modules.travel.dtos.travel_plan.write;
+
+import jakarta.validation.constraints.NotEmpty;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+import java.util.UUID;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class RemoveParticipantsRequest {
+    @NotEmpty
+    private List<UUID> participantIds;
+}
